# lnd_srf_for

./: .gitattributes  README.md  environment.yml  setup.cfg
data_clean/: gimpdem_90m_v01.1.nc  krigged_dem_errormap_nsidc.nc  krigged_dem_nsidc.nc
data_clean/mar_model/: mean-MAR_ACCESS1.3-1980-1989_amsrgr.nc
data_raw/: ASurf_WFDE5_CRU_v1.1.nc  SUMup_dataset_july2018_accumulation_on_land_ice.nc  gimpdem_90m_v01.1.tif  krigged_dem_errormap_nsidc.bin.hdr
data_raw/fettweis_et_al_2017/: MARv3.5.2-20km-monthly-20CRv2c-1980.nc  MARv3.5.2-20km-monthly-20CRv2c-1981.nc  MARv3.5.2-20km-monthly-20CRv2c-1982.nc  MARv3.5.2-20km-monthly-20CRv2c-1983.nc  MARv3.5.2-20km-monthly-20CRv2c-1984.nc  MARv3.5.2-20km-monthly-20CRv2c-1985.nc  MARv3.5.2-20km-monthly-20CRv2c-1986.nc  MARv3.5.2-20km-monthly-20CRv2c-1987.nc  (+2 more)
results/: PRECTOT_MERRA2_temporal_mean.nc  Rainf_WFDE5_temporal_mean_v1.1.nc  Snowf_WFDE5_temporal_mean_v1.1.nc  Tair_WFDE5_temporal_mean_v1.1.nc  clmforc.GSWP3.c2011.0.5x0.5.PRECTmms.temporal_mean.nc
schneida_tools/: __main__.py  agu_full.mplstyle  agu_quarter.mplstyle  ais_dem.py  analysis.py  analysis_era5.py  analysis_gswp3.py  analysis_merra2.py  clean_data.py  coordinate_space.py  cruncep.py  era5.py  gmd_movie_frame.mplstyle  gris_dem.py  grl.mplstyle  gswp3.py  map_mean_1980_1990_gris_precip_sumup_er5_we5_cn7_gp3_mr2.py  mar3.py  merra2.py  ncks_mk_time_rec_dmn.py  process_fettweis17.py  remap_mar.bash  schneida_args.py  sumup.py  taylor.py  uci_darkblue.mplstyle  verify_precip.py  verify_precip_era5.py  verify_precip_merra2.py  wfde5.py
tests/: test_all.py
(+3 files in other folders)
