[metadata]
# replace with your username:
name = schneida_tools
version = 0.0.1
author = Adam Schneider
author_email = amschne@umich.edu
description = [Tools to analyze ice sheet precipitation data]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amschne/schneida_tools
project_urls =
    Bug Tracker = https://github.com/amschne/schneida_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
